[gd_scene load_steps=43 format=2]

[ext_resource path="res://sprites/Game Boy Advance - Pokemon Emerald - Scorched Slab.png" type="Texture" id=1]
[ext_resource path="res://sprites/fund.png" type="Texture" id=2]
[ext_resource path="res://cenas/Level3.gd" type="Script" id=3]
[ext_resource path="res://cenas/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/Portal3.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/1-58-Fallarbor-Town.wav" type="AudioStream" id=6]
[ext_resource path="res://cenas/inimigue5.tscn" type="PackedScene" id=7]
[ext_resource path="res://cenas/inimigue6.tscn" type="PackedScene" id=8]
[ext_resource path="res://cenas/Transition.tscn" type="PackedScene" id=9]
[ext_resource path="res://pokemon3.tres" type="Resource" id=10]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://cenas/battle_level3.gd" type="Script" id=12]
[ext_resource path="res://020_Espeon.webp" type="Texture" id=13]
[ext_resource path="res://sprites/Captura de tela 2023-11-13 074220.png" type="Texture" id=14]
[ext_resource path="res://sprites/_f6cc98aa-1367-41b4-aa68-bf87d071db19-removebg-preview.png" type="Texture" id=15]
[ext_resource path="res://audio/1-16-Trainer-Battle_.wav" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 90.875 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64.5, 17.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.5, 10 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 1, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=7]
size = 40
extra_spacing_top = -4
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=14]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=15]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("seta:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "enemy_defeated"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "mini_shake"
length = 0.5

[sub_resource type="Animation" id=20]
resource_name = "seta"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("seta:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "shake"
length = 0.5

[sub_resource type="DynamicFont" id=22]
size = 128
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=23]
size = 128
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=24]
size = 128
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=25]
size = 128
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 65.25, 10 )

[node name="Level3" type="Node2D"]
script = ExtResource( 3 )

[node name="Fund" type="Sprite" parent="."]
position = Vector2( 230, 230 )
texture = ExtResource( 2 )

[node name="Fund2" type="Sprite" parent="Fund"]
position = Vector2( -1, 145 )
texture = ExtResource( 2 )

[node name="Fund3" type="Sprite" parent="Fund"]
position = Vector2( 457, 0 )
texture = ExtResource( 2 )

[node name="Fund4" type="Sprite" parent="Fund"]
position = Vector2( 453, 145 )
texture = ExtResource( 2 )

[node name="Fund5" type="Sprite" parent="Fund"]
position = Vector2( 564, 145 )
texture = ExtResource( 2 )

[node name="Fund6" type="Sprite" parent="Fund"]
position = Vector2( 565, -1 )
texture = ExtResource( 2 )

[node name="GameBoyAdvance-PokemonEmerald-ScorchedSlab" type="Sprite" parent="."]
position = Vector2( 497, 302.5 )
scale = Vector2( 1.20174, 1.30786 )
texture = ExtResource( 1 )

[node name="Area2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 618, 483 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 379, 476 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 393, 301 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 594, 302 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 427, 588 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 559, 590 )
shape = SubResource( 2 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 411, 246.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 571, 247 )
shape = SubResource( 2 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 419, 275 )
shape = SubResource( 3 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 565, 277 )
shape = SubResource( 3 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 456, 220 )
shape = SubResource( 3 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 524, 219 )
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 493, 532 )

[node name="Portal3" parent="." instance=ExtResource( 5 )]
position = Vector2( 482, 205 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 495, 577 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="inimigue1" parent="." instance=ExtResource( 7 )]
position = Vector2( 429, 443 )
scale = Vector2( 2, 2 )

[node name="inimigue1" parent="inimigue1" instance=ExtResource( 8 )]
position = Vector2( 58.5, -65 )

[node name="battle" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
enemy = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="battle"]
position = Vector2( 512, 303 )
scale = Vector2( 2.22234, 1.29694 )
texture = ExtResource( 2 )

[node name="EnemyContainer" type="VBoxContainer" parent="battle"]
margin_left = 292.0
margin_top = 52.0
margin_right = 687.0
margin_bottom = 278.0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="battle/EnemyContainer"]
margin_top = 95.0
margin_right = 395.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 35 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="battle/EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="Enemy" type="Sprite" parent="battle/EnemyContainer"]
position = Vector2( 199.865, 229.076 )
scale = Vector2( 0.708817, 0.678527 )
texture = ExtResource( 13 )

[node name="PlayerPanel" type="Panel" parent="battle"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 454.0
margin_right = 984.0
margin_bottom = 561.0
custom_styles/panel = SubResource( 8 )

[node name="PlayerData" type="HBoxContainer" parent="battle/PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="battle/PlayerPanel/PlayerData"]
margin_top = 14.0
margin_right = 494.0
margin_bottom = 61.0
size_flags_horizontal = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="battle/PlayerPanel/PlayerData"]
margin_left = 498.0
margin_top = 15.0
margin_right = 993.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="battle/PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -2.0
margin_bottom = -2.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="battle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.0
margin_top = 6.0
margin_right = 1004.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 8 )

[node name="Actions" type="HBoxContainer" parent="battle/ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 12
alignment = 1

[node name="Attack" type="Button" parent="battle/ActionsPanel/Actions"]
margin_right = 323.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "ATAQUE"

[node name="Defend" type="Button" parent="battle/ActionsPanel/Actions"]
margin_left = 335.0
margin_right = 658.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "ESQUIVAR"

[node name="Run" type="Button" parent="battle/ActionsPanel/Actions"]
margin_left = 670.0
margin_right = 993.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "FUGIR"

[node name="Textbox" type="Panel" parent="battle"]
visible = false
margin_left = 6.0
margin_top = 14.0
margin_right = 1014.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 13 )

[node name="Label" type="Label" parent="battle/Textbox"]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 14 )
text = "UM SLOWKING apareceu!"

[node name="ticker" type="Label" parent="battle/Textbox"]
margin_left = 975.0
margin_top = 66.0
margin_right = 999.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 15 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="battle"]
anims/RESET = SubResource( 16 )
anims/enemy_damaged = SubResource( 17 )
anims/enemy_defeated = SubResource( 18 )
anims/mini_shake = SubResource( 19 )
anims/seta = SubResource( 20 )
anims/shake = SubResource( 21 )

[node name="Options" type="Node2D" parent="battle"]

[node name="Option1" type="Sprite" parent="battle/Options"]
position = Vector2( 300, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="battle/Options/Option1"]
margin_left = -66.6667
margin_top = -49.1228
margin_right = 61.3333
margin_bottom = 44.8772
custom_fonts/font = SubResource( 22 )
text = "25"
align = 1

[node name="Option2" type="Sprite" parent="battle/Options"]
position = Vector2( 418, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="battle/Options/Option2"]
margin_left = -63.1578
margin_top = -49.1228
margin_right = 64.8422
margin_bottom = 44.8772
custom_fonts/font = SubResource( 23 )
text = "35"
align = 1

[node name="Option3" type="Sprite" parent="battle/Options"]
position = Vector2( 535, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="battle/Options/Option3"]
margin_left = -56.1404
margin_top = -49.1228
margin_right = 71.8596
margin_bottom = 44.8772
custom_fonts/font = SubResource( 24 )
text = "34"

[node name="Option4" type="Sprite" parent="battle/Options"]
position = Vector2( 655, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="battle/Options/Option4"]
margin_left = -66.6667
margin_top = -45.614
margin_right = 61.3333
margin_bottom = 48.386
custom_fonts/font = SubResource( 25 )
text = "45"

[node name="seta" type="Sprite" parent="battle"]
visible = false
position = Vector2( 655, 367 )
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 15 )

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 515, 445 )
shape = SubResource( 26 )

[node name="Transition" parent="." instance=ExtResource( 9 )]
visible = false

[node name="MusicaBatalha" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -6.846

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="fimbatalha3" from="battle" to="." method="_on_battle_fimbatalha3"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Attack" to="battle" method="_on_Attack_pressed"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Defend" to="battle" method="_on_Defend_pressed"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Run" to="battle" method="_on_Run_pressed"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
